# krr

./: .gitignore  Cargo.toml
.github/workflows/: ci.yml
benches/: benchmark.rs
resources/: 30x500_m_3_allen_eq1.csp  allen.txt  allen2.txt  ia_test_instances_6.txt  inconsistent_but_closed.csp  pc_test1.csp
src/: bin.rs  lib.rs
