[package]
name = "krr"
version = "0.3.0"
authors = ["Johannes Pfrang <johannespfrang@gmail.com>"]
description = "Knowledge Representation & Reasoning"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "krr"
path = "src/lib.rs"

[[bin]]
name = "krr"
path = "src/bin.rs"

[dependencies]
clap = "2.33"
itertools = "0.8"
unicode-segmentation = "1.6"
#smallvec = "~1.0.0"

[dev-dependencies]
criterion = "0.3"

# TODO: PGO in release/bench profiles (https://doc.rust-lang.org/rustc/profile-guided-optimization.html)
[profile.release]
lto = true
debug = true # for perf profiling
#codegen-units = 1

[profile.bench]
lto = true
#codegen-units = 1

[[bench]]
name = "benchmark"
harness = false
