[package]
name = "krr"
version = "0.3.0"
authors = ["Johannes Pfrang <johannespfrang@gmail.com>"]
description = "Knowledge Representation & Reasoning"
edition = "2018"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "krr"
path = "src/lib.rs"

[features]
# Hashbrown is 2-3 times faster than std::HashMap (due to its faster default hasher)
default = ["map-hashbrown"]
# These features are mutually exclusive, but that's still inexpressible in cargo
# https://github.com/rust-lang/cargo/issues/2980
map-indexmap = ["indexmap"]
map-hashbrown = ["hashbrown"]

[[bin]]
name = "krr"
path = "src/bin.rs"

[dependencies]
clap = "2.33"
itertools = "0.8"
unicode-segmentation = "1.6"
#smallvec = "~1.0.0"
# Priority queue implementation (this is the only one that I found that fits all my criteria)
keyed_priority_queue = { git = "https://github.com/Ten0/keyed_priority_queue.git" }
# Alternative map implementations
indexmap = { version = "1.3", optional = true}
hashbrown = { version = "0.6", optional = true}

[dev-dependencies]
criterion = "0.3"

# TODO: PGO in release/bench profiles (https://doc.rust-lang.org/rustc/profile-guided-optimization.html)
[profile.release]
lto = true
debug = true # for perf profiling
#codegen-units = 1

[profile.bench]
lto = true
#codegen-units = 1

[[bench]]
name = "benchmark"
harness = false
